--- a/Config/config.json
+++ b/Config/config.json
@@ -1,231 +1,205 @@
 {
+  "paths": {
+    "logs": "C:\\LogsAndExports\\TechToolbox\\Logs",
+    "exportDirectory": "C:\\LogsAndExports\\TechToolbox\\Exports",
+    "temp": "C:\\Temp\\TechToolbox"
+  },
+  "schemaVersion": 1,
+  "Dependencies": {
+    "Defer": true,
+    "Version": "3.9.0",
+    "Bundled": true,
+    "Name": "ExchangeOnlineManagement",
+    "Required": true
+  },
   "settings": {
-    "browserCleanup": {
-      "defaultProfiles": null,
-      "skipLocalStorage": false,
-      "includeCache": true,
-      "killProcesses": true,
-      "logFile": "BrowserCleanup.log",
-      "defaultBrowser": "All",
-      "sleepAfterKillMs": 1500,
-      "includeCookies": true,
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\BrowserCleanup"
-    },
-    "pagefile": {
-      "defaultPath": "C:\\pagefile.sys",
-      "minSizeMB": 16,
-      "maxSizeMB": 2097152
-    },
-    "dnsLogging": {
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\DNS",
-      "autoEnableDiagnostics": true,
-      "parseMode": "simple",
-      "enabled": true,
-      "maxLogSizeMB": 50
-    },
-    "messageTrace": {
-      "summaryFileNamePattern": "MessageTraceSummary_{0}.csv",
-      "autoExport": true,
-      "promptForMissingInputs": true,
-      "timestampFormat": "yyyyMMdd-HHmmss",
-      "defaultLookbackHours": 48,
-      "defaultExportFolder": "C:\\LogsAndExports\\TechToolbox\\Exports\\MessageTraces",
-      "detailsFileNamePattern": "MessageTraceDetails_{0}.csv"
-    },
-    "naming": {
-      "samPattern": "flast",
-      "upnPattern": "flast",
-      "copyAttributes": [
-        "description",
-        "department",
-        "company",
-        "office",
-        "manager"
-      ]
-    },
-    "logging": {
-      "minimumLevel": "Info",
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs",
-      "logFileNameFormat": "TechToolbox_{yyyyMMdd}.log",
-      "logFile": "TechToolbox.log",
-      "includeTimestamps": true,
-      "enableConsole": true,
-      "enableFileLogging": true
-    },
-    "aadSync": {
-      "defaultPolicyType": "Delta",
-      "logFile": "AADSync.log",
-      "defaultPort": 5985,
-      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\AADSync",
-      "allowKerberos": true,
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\AADSync"
-    },
-    "windowsUpdate": {
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsUpdate",
-      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsUpdate",
-      "logFileNameFormat": "WindowsUpdate_{yyyyMMdd}.log"
-    },
-    "systemRepair": {
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\SystemRepair",
-      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\SystemRepair",
-      "logFileNameFormat": "SystemRepair_{yyyyMMdd}.log",
-      "defaultComputerName": null,
-      "runRemote": true
-    },
-    "userSearch": {
-      "licenseMap": {
-        "c7df2760-2c81-4ef7-b578-5b5392b571df": "Microsoft 365 E5",
-        "06ebc4ee-1bb5-47dd-8120-11324bc54e06": "Office 365 E5",
-        "f30db892-07e9-47e9-837c-80727f46fd3d": "Microsoft 365 Business Premium",
-        "6fd2c87f-b296-42f0-b197-1e91e994b900": "Microsoft 365 E3",
-        "4b9405b0-7788-4568-add1-99614e613b69": "Microsoft 365 F3",
-        "e7bfbdf0-0a0b-4d8b-bd3d-7c6f0f2b5c3a": "Visio Plan 2",
-        "9c0dab89-a30c-4117-86e7-97bda240acd2": "Visio Plan 1",
-        "c42b9cae-ea4f-4ab7-9717-81576235ccac": "Exchange Online Plan 2",
-        "e6778190-713e-4e4f-9119-8b8238de25df": "Microsoft 365 Business Basic",
-        "53818b1b-4a27-454b-8896-0dba576410e6": "Project Plan 3",
-        "4b585984-651b-448a-9e53-3b10f069cf7f": "Exchange Online Plan 1",
-        "a4585165-0533-458a-bf7c-5e2d8c699c13": "Project Plan 1",
-        "18181a46-0d4e-45cd-891e-60aabd171b4e": "Microsoft 365 F1",
-        "c2273bd0-dff7-4215-9ef5-2c7bcfb06425": "Microsoft 365 Business Standard",
-        "94763226-9b3c-4e75-a931-5c89701abe66": "Teams Phone Standard",
-        "05e9a617-0261-4cee-bb44-138d3ef5d965": "Office 365 E3"
-      },
-      "includeTeams": true,
-      "includeEXO": true
-    },
-    "tenant": {
-      "clientId": "9c0e43db-f3fc-4bba-9530-10b5d063730b",
-      "tenantId": "e1b83792-ab2b-418b-9481-fe12c76f201e",
-      "upnSuffix": "vadtek.com",
-      "defaultUsageLocation": "US",
-      "authorityUrl": "https://login.microsoftonline.com",
-      "organizationName": "valueaddedcompanies.onmicrosoft.com",
-      "defaultMailboxLanguage": "en-US"
-    },
-    "largeFileSearch": {
-      "exportDirectory": "C:\\LogsAndExports\\TechToolbox\\Exports\\LargeFileSearch",
-      "exportFileNamePattern": "LargeFiles_{yyyyMMdd_HHmmss}.csv",
-      "defaultMinSizeMB": 256,
-      "defaultSearchDirectory": [
-        "C:\\",
-        "D:\\"
-      ]
-    },
-    "compliance": {
-      "purgeBatchSize": 25,
-      "maxRetryAttempts": 3,
-      "searchBatchSize": 50
-    },
-    "downloadsCleanup": {
-      "cutoffYear": 2024,
-      "dryRun": false,
-      "excludeExtensions": [
-        ".pst",
-        ".ost"
-      ],
-      "includeExtensions": null
-    },
-    "subnetScan": {
-      "httpTimeoutMs": 1000,
-      "httpBanner": true,
-      "resolveNames": true,
-      "pingTimeoutMs": 250,
-      "exportDir": "C:\\LogsAndExports\\TechToolbox\\Exports\\SubnetScan",
-      "displayAlpha": 0.1,
-      "defaultPort": 80,
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\SubnetScan",
-      "tcpTimeoutMs": 500,
-      "ewmaAlpha": 0.15,
-      "logFile": "SubnetScan.log",
-      "exportCsv": true
-    },
     "teams": {
       "includeInOffboarding": true
     },
-    "offboarding": {
-      "useHybridAutoDisable": true,
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\Offboarding",
-      "disabledOU": "",
-      "logFile": "Offboarding.log",
-      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\Offboarding",
-      "cleanupADGroups": false,
-      "includeEXO": true,
-      "logFileNameFormat": "Offboarding_{yyyyMMdd}.log"
-    },
-    "exchangeOnline": {
-      "showProgress": true,
-      "includeInOffboarding": true,
-      "autoConnect": true,
-      "autoDisconnectPrompt": true
-    },
-    "copyDirectory": {
-      "retryCount": 2,
-      "defaultComputerName": null,
-      "mirror": false,
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\Robocopy",
-      "logFileNameFormat": "Robocopy_{yyyyMMdd}.log",
-      "waitSeconds": 5,
-      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\Robocopy",
-      "runRemote": true,
-      "copyFlags": [
-        "/E",
-        "/COPYALL"
-      ]
-    },
-    "batteryReport": {
-      "debugInfo": "C:\\Temp\\installed-batteries_debug.txt",
-      "outputJson": "C:\\Temp\\installed-batteries.json",
-      "waitTimeoutSeconds": 10,
-      "reportPath": "C:\\Temp\\battery-report.html"
-    },
-    "systemSnapshot": {
-      "exportPath": "C:\\LogsAndExports\\TechToolbox\\Exports\\SystemSnapshot",
-      "includeServices": true,
-      "includeRoles": true
-    },
-    "graph": {
-      "profile": "v1.0",
-      "appOnly": {
-        "enabled": false,
-        "certThumbprint": "",
-        "clientId": "",
-        "clientSecret": ""
-      },
-      "scopes": [
-        "User.Read.All",
-        "Group.ReadWrite.All",
-        "Directory.ReadWrite.All",
-        "AuditLog.Read.All"
-      ],
-      "tenantId": "e1b83792-ab2b-418b-9481-fe12c76f201e",
-      "environment": "Global"
-    },
     "output": {
-      "writeTable": true,
-      "encoding": "UTF8"
+      "encoding": "UTF8",
+      "writeTable": true
+    },
+    "userSearch": {
+      "licenseMap": {
+        "f30db892-07e9-47e9-837c-80727f46fd3d": "Microsoft 365 Business Premium",
+        "9c0dab89-a30c-4117-86e7-97bda240acd2": "Visio Plan 1",
+        "c7df2760-2c81-4ef7-b578-5b5392b571df": "Microsoft 365 E5",
+        "e7bfbdf0-0a0b-4d8b-bd3d-7c6f0f2b5c3a": "Visio Plan 2",
+        "06ebc4ee-1bb5-47dd-8120-11324bc54e06": "Office 365 E5",
+        "53818b1b-4a27-454b-8896-0dba576410e6": "Project Plan 3",
+        "18181a46-0d4e-45cd-891e-60aabd171b4e": "Microsoft 365 F1",
+        "e6778190-713e-4e4f-9119-8b8238de25df": "Microsoft 365 Business Basic",
+        "c2273bd0-dff7-4215-9ef5-2c7bcfb06425": "Microsoft 365 Business Standard",
+        "4b9405b0-7788-4568-add1-99614e613b69": "Microsoft 365 F3",
+        "4b585984-651b-448a-9e53-3b10f069cf7f": "Exchange Online Plan 1",
+        "05e9a617-0261-4cee-bb44-138d3ef5d965": "Office 365 E3",
+        "a4585165-0533-458a-bf7c-5e2d8c699c13": "Project Plan 1",
+        "6fd2c87f-b296-42f0-b197-1e91e994b900": "Microsoft 365 E3",
+        "94763226-9b3c-4e75-a931-5c89701abe66": "Teams Phone Standard",
+        "c42b9cae-ea4f-4ab7-9717-81576235ccac": "Exchange Online Plan 2"
+      },
+      "includeEXO": true,
+      "includeTeams": true
     },
     "windowsActivation": {
       "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsActivation",
       "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsActivation",
       "logFileNameFormat": "ActivationInfo_{computer}_{yyyyMMdd-HHmmss}.txt"
     },
+    "tenant": {
+      "tenantId": "e1b83792-ab2b-418b-9481-fe12c76f201e",
+      "organizationName": "valueaddedcompanies.onmicrosoft.com",
+      "authorityUrl": "https://login.microsoftonline.com",
+      "upnSuffix": "vadtek.com",
+      "defaultMailboxLanguage": "en-US",
+      "clientId": "9c0e43db-f3fc-4bba-9530-10b5d063730b",
+      "defaultUsageLocation": "US"
+    },
+    "copyDirectory": {
+      "waitSeconds": 5,
+      "runRemote": true,
+      "logFileNameFormat": "Robocopy_{yyyyMMdd}.log",
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\Robocopy",
+      "defaultComputerName": null,
+      "mirror": false,
+      "retryCount": 2,
+      "copyFlags": [
+        "/E",
+        "/COPYALL"
+      ],
+      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\Robocopy"
+    },
+    "largeFileSearch": {
+      "exportDirectory": "C:\\LogsAndExports\\TechToolbox\\Exports\\LargeFileSearch",
+      "exportFileNamePattern": "LargeFiles_{yyyyMMdd_HHmmss}.csv",
+      "defaultSearchDirectory": [
+        "C:\\",
+        "D:\\"
+      ],
+      "defaultMinSizeMB": 256
+    },
     "defaults": {
+      "promptForKqlQuery": true,
+      "showProgress": true,
       "promptForCredentials": true,
       "promptForDateRanges": true,
-      "promptForCaseName": true,
-      "promptForSearchName": true,
       "promptForHostname": true,
       "promptForContentMatchQuery": true,
-      "promptForKqlQuery": true,
-      "showProgress": true
+      "promptForSearchName": true,
+      "promptForCaseName": true
+    },
+    "offboarding": {
+      "cleanupADGroups": false,
+      "disabledOU": "",
+      "includeEXO": true,
+      "logFileNameFormat": "Offboarding_{yyyyMMdd}.log",
+      "useHybridAutoDisable": true,
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\Offboarding",
+      "logFile": "Offboarding.log",
+      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\Offboarding"
+    },
+    "batteryReport": {
+      "debugInfo": "C:\\Temp\\installed-batteries_debug.txt",
+      "outputJson": "C:\\Temp\\installed-batteries.json",
+      "reportPath": "C:\\Temp\\battery-report.html",
+      "waitTimeoutSeconds": 10
+    },
+    "purview": {
+      "registrationWaitSeconds": 90,
+      "purge": {
+        "timeoutSeconds": 1200,
+        "pollSeconds": 5,
+        "requireConfirmation": true
+      },
+      "autoDisconnectPrompt": true,
+      "defaultAllMailboxes": true,
+      "registrationPollSeconds": 3,
+      "promptForContentMatchQuery": true,
+      "autoConnect": true,
+      "search": {
+        "maxAttempts": 40,
+        "delaySeconds": 10
+      }
+    },
+    "passwords": {
+      "domainAdminCred": {
+        "password": "",
+        "username": ""
+      },
+      "default": {
+        "separator": "",
+        "style": "Readable",
+        "length": 12,
+        "digits": 2
+      },
+      "wordListPath": "C:\\TechToolbox\\Config\\wordlist.txt"
+    },
+    "pagefile": {
+      "maxSizeMB": 2097152,
+      "minSizeMB": 16,
+      "defaultPath": "C:\\pagefile.sys"
+    },
+    "downloadsCleanup": {
+      "excludeExtensions": [
+        ".pst",
+        ".ost"
+      ],
+      "dryRun": false,
+      "cutoffYear": 2024,
+      "includeExtensions": null
+    },
+    "compliance": {
+      "purgeBatchSize": 25,
+      "maxRetryAttempts": 3,
+      "searchBatchSize": 50
+    },
+    "remoteSoftwareInventory": {
+      "promptForCredentials": true,
+      "throttleLimit": 32,
+      "includeAppx": false,
+      "outDir": "C:\\LogsAndExports\\TechToolbox\\Exports\\RemoteSoftwareInventory",
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\RemoteSoftwareInventory",
+      "consolidated": false,
+      "logFileNameFormat": "RemoteSoftwareInventory_{yyyyMMdd}.log",
+      "logFile": "RemoteSoftwareInventory.log"
+    },
+    "windowsUpdate": {
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsUpdate",
+      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsUpdate",
+      "logFileNameFormat": "WindowsUpdate_{yyyyMMdd}.log"
+    },
+    "messageTrace": {
+      "promptForMissingInputs": true,
+      "defaultExportFolder": "C:\\LogsAndExports\\TechToolbox\\Exports\\MessageTraces",
+      "detailsFileNamePattern": "MessageTraceDetails_{0}.csv",
+      "timestampFormat": "yyyyMMdd-HHmmss",
+      "summaryFileNamePattern": "MessageTraceSummary_{0}.csv",
+      "defaultLookbackHours": 48,
+      "autoExport": true
+    },
+    "graph": {
+      "tenantId": "e1b83792-ab2b-418b-9481-fe12c76f201e",
+      "profile": "v1.0",
+      "scopes": [
+        "User.Read.All",
+        "Group.ReadWrite.All",
+        "Directory.ReadWrite.All",
+        "AuditLog.Read.All"
+      ],
+      "environment": "Global",
+      "appOnly": {
+        "enabled": false,
+        "clientId": "",
+        "clientSecret": "",
+        "certThumbprint": ""
+      }
     },
     "ad": {
-      "searchBase": "DC=vadtek,DC=com",
-      "resolveGroups": true,
-      "domainController": "DC-1.vadtek.com",
       "searchScope": "Subtree",
+      "searchBase": "DC=vadtek,DC=com",
       "allowMultipleMatches": false,
+      "resolveGroups": true,
       "defaultAttributes": [
         "displayName",
         "userPrincipalName",
@@ -243,62 +217,88 @@
         "distinguishedName",
         "objectGuid"
       ],
-      "resolveManager": true,
       "enableProxyAddressSearch": true,
+      "resolveManager": true,
+      "domainController": "DC-1.vadtek.com",
       "enableMailSearch": true
     },
-    "remoteSoftwareInventory": {
-      "consolidated": false,
-      "promptForCredentials": true,
-      "includeAppx": false,
-      "outDir": "C:\\LogsAndExports\\TechToolbox\\Exports\\RemoteSoftwareInventory",
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\RemoteSoftwareInventory",
-      "logFileNameFormat": "RemoteSoftwareInventory_{yyyyMMdd}.log",
-      "logFile": "RemoteSoftwareInventory.log",
-      "throttleLimit": 32
+    "systemSnapshot": {
+      "includeServices": true,
+      "exportPath": "C:\\LogsAndExports\\TechToolbox\\Exports\\SystemSnapshot",
+      "includeRoles": true
     },
-    "passwords": {
-      "domainAdminCred": {
-        "username": "",
-        "password": ""
-      },
-      "wordListPath": "C:\\TechToolbox\\Config\\wordlist.txt",
-      "default": {
-        "length": 12,
-        "separator": "",
-        "style": "Readable",
-        "digits": 2
-      }
+    "dnsLogging": {
+      "maxLogSizeMB": 50,
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\DNS",
+      "autoEnableDiagnostics": true,
+      "parseMode": "simple",
+      "enabled": true
     },
-    "purview": {
+    "aadSync": {
+      "defaultPolicyType": "Delta",
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\AADSync",
+      "allowKerberos": true,
+      "defaultPort": 5985,
+      "logFile": "AADSync.log",
+      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\AADSync"
+    },
+    "naming": {
+      "samPattern": "flast",
+      "upnPattern": "flast",
+      "copyAttributes": [
+        "description",
+        "department",
+        "company",
+        "office",
+        "manager"
+      ]
+    },
+    "exchangeOnline": {
+      "includeInOffboarding": true,
       "autoConnect": true,
-      "registrationWaitSeconds": 90,
-      "defaultAllMailboxes": true,
-      "search": {
-        "delaySeconds": 10,
-        "maxAttempts": 40
-      },
-      "autoDisconnectPrompt": true,
-      "purge": {
-        "pollSeconds": 5,
-        "timeoutSeconds": 1200,
-        "requireConfirmation": true
-      },
-      "promptForContentMatchQuery": true,
-      "registrationPollSeconds": 3
+      "showProgress": true,
+      "autoDisconnectPrompt": true
+    },
+    "logging": {
+      "logFileNameFormat": "TechToolbox_{yyyyMMdd}.log",
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs",
+      "includeTimestamps": true,
+      "enableConsole": true,
+      "logFile": "TechToolbox.log",
+      "enableFileLogging": true,
+      "minimumLevel": "Info"
+    },
+    "subnetScan": {
+      "httpBanner": true,
+      "exportCsv": true,
+      "ewmaAlpha": 0.15,
+      "resolveNames": true,
+      "httpTimeoutMs": 1000,
+      "pingTimeoutMs": 250,
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\SubnetScan",
+      "exportDir": "C:\\LogsAndExports\\TechToolbox\\Exports\\SubnetScan",
+      "displayAlpha": 0.1,
+      "tcpTimeoutMs": 500,
+      "logFile": "SubnetScan.log",
+      "defaultPort": 80
+    },
+    "browserCleanup": {
+      "includeCache": true,
+      "skipLocalStorage": false,
+      "defaultProfiles": null,
+      "defaultBrowser": "All",
+      "sleepAfterKillMs": 1500,
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\BrowserCleanup",
+      "killProcesses": true,
+      "logFile": "BrowserCleanup.log",
+      "includeCookies": true
+    },
+    "systemRepair": {
+      "runRemote": true,
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\SystemRepair",
+      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\SystemRepair",
+      "defaultComputerName": null,
+      "logFileNameFormat": "SystemRepair_{yyyyMMdd}.log"
     }
-  },
-  "paths": {
-    "exportDirectory": "C:\\LogsAndExports\\TechToolbox\\Exports",
-    "logs": "C:\\LogsAndExports\\TechToolbox\\Logs",
-    "temp": "C:\\Temp\\TechToolbox"
-  },
-  "Dependencies": {
-    "Required": true,
-    "Name": "ExchangeOnlineManagement",
-    "Version": "3.9.0",
-    "Defer": true,
-    "Bundled": true
-  },
-  "schemaVersion": 1
+  }
 }
